--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,34 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
 
+:root {
+  scroll-behavior: smooth;
+  --primary-theme-color: #20232a;
+  --secondary-theme-color: #282c34;
+  --text-color: #fff;
+  --shadow-color: #999;
+  --button-color: #61dafb;
+  --button-color-active: #fff;
+  --button-text-color: #000;
+  --padding-section: 2rem 0;
+  --padding-container: 0 2rem;
+  --primary-highlight: #61dafb;
+  --secondary-highlight: #ffd700;
+  --border-radius: 0.5rem;
+  --all-transitions: all 0.25s;
+}
+
 .body {
-  font-family: 'Open Sans', sans-serif;
+  background-color: var(--secondary-theme-color);
+  color: var(--text-color);
+  font-family: "Open Sans", sans-serif;
+  margin: 0;
+  transition: var(--all-transitions);
+  
+  min-height: 200vh;
+}
+
+@media (min-width: 854px) {
+  :root {
+    --padding-container: 0;
+  }
 }
