--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,45 @@
   transition: var(--all-transitions);
 }
 
+.spinner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 50vh;
+}
+
+.spinner-container {
+  position: relative;
+  width: 2.5rem;
+  height: 2.5rem;
+}
+
+.spinner__double-bounce1, .spinner__double-bounce2 {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: var(--button-color);
+  opacity: 0.6;
+  position: absolute;
+  top: 0;
+  left: 0;
+  animation: sk-bounce 2.0s infinite ease-in-out;
+}
+
+.spinner__double-bounce2 {
+  animation-delay: -1.0s;
+}
+
+@keyframes sk-bounce {
+  0%, 100% {
+    transform: scale(0.0);
+  }
+
+  50% {
+    transform: scale(1.0);
+  }
+}
+
 @media (min-width: 854px) {
   :root {
     --padding-container: 0;
