Instalación de animate.css y update de proyecto

--- a/src/styles/css/Cupcakes.css
+++ b/src/styles/css/Cupcakes.css
@@ -94,7 +94,8 @@
 }
 
 .cupcakes__cupcake-button {
-  text-decoration: none;
+  /* text-decoration: none; */
+  border: none;
   font-weight: 700;
   background-color: var(--button-color);
   padding: 0.5rem 1rem;
@@ -106,7 +107,6 @@
 .cupcakes__cupcake-button--active, .cupcakes__cupcake-button:hover {
   background-color: var(--button-color-active);
 }
-
 
 @media (min-width: 854px) {
   .cupcakes-container {
