--- a/src/styles/scss/Home.scss
+++ b/src/styles/scss/Home.scss
@@ -25,7 +25,7 @@
   font-weight: $font-weight;
   border-radius: $border-radius;
   transition: var(--all-transitions);
-
+  border: none;
   &--active,
   &:hover {
     background-color: var(--button-color-active);
