--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap");
 
 :root {
   scroll-behavior: smooth;
   --primary-theme-color: #20232a;
   --secondary-theme-color: #282c34;
   --text-color: #fff;
-  --shadow-color: #999;
+  --shadow-color: #8888;
   --button-color: #61dafb;
   --button-color-active: #fff;
   --button-text-color: #000;
-  --button-text-color-active: #000;
   --padding-section: 2rem 0;
   --padding-container: 0 2rem;
   --primary-highlight: #61dafb;
@@ -26,6 +25,14 @@
   transition: var(--all-transitions);
 }
 
+.body--light {
+  --primary-theme-color: #fff;
+  --secondary-theme-color: #f5f5f5;
+  --text-color: #000;
+  --shadow-color: #2228;
+}
+
+
 .spinner {
   display: flex;
   align-items: center;
@@ -39,7 +46,8 @@
   height: 2.5rem;
 }
 
-.spinner__double-bounce1, .spinner__double-bounce2 {
+.spinner__double-bounce1,
+.spinner__double-bounce2 {
   width: 100%;
   height: 100%;
   border-radius: 50%;
@@ -56,7 +64,9 @@
 }
 
 @keyframes sk-bounce {
-  0%, 100% {
+
+  0%,
+  100% {
     transform: scale(0.0);
   }
 
@@ -67,6 +77,6 @@
 
 @media (min-width: 854px) {
   :root {
-    --padding-container: 0;
+    --padding-container: 0 0.75rem;
   }
 }
