--- a/src/styles/css/Header.css
+++ b/src/styles/css/Header.css
@@ -25,6 +25,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  max-width: 1024px;
+  margin: auto;
   padding: var(--padding-container);
 }
 
@@ -37,6 +39,52 @@
   height: 100%;
 }
 
+.header-nav__theme-menu-container {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.header-nav__theme-icon-container {
+  position: relative;
+  display: flex;
+  align-items: center;
+  background-color: var(--primary-highlight);
+  border-radius: 1rem;
+  border: none;
+  cursor: pointer;
+  padding: 0 0.25rem;
+  transition: var(--all-transitions);
+}
+
+.header-nav__theme-icon-container::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  background-color: var(--primary-theme-color);
+  width: 1.625rem;
+  height: 1.625rem;
+  border-radius: 50%;
+  box-shadow:
+    0 0 0.125rem 0 var(--shadow-color),
+    0 0 0.25rem 0 var(--shadow-color),
+    0 0 0.375rem 0 var(--shadow-color),
+    0 0 0.5rem 0 var(--shadow-color);
+  transition: var(--all-transitions);
+}
+
+.header-nav__theme-icon-container--active {
+  background-color: var(--secondary-highlight);
+}
+
+.header-nav__theme-icon-container--active::before {
+  left: 50%;
+}
+
+.header-nav__theme-icon {
+  font-size: 1rem;
+}
+
 .header-nav__menu-icon-container {
   height: 2rem;
   cursor: pointer;
@@ -44,14 +92,11 @@
 }
 
 .header-nav__menu-icon {
+  fill: var(--text-color);
   height: 100%;
 }
 
-.header-nav__menu-icon--scroll {
-  fill: var(--primary-highlight);
-}
-
-.header-nav__link-list {
+.header-nav__menu-link-list {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -59,9 +104,9 @@
   gap: 2rem;
   position: fixed;
   top: 0;
+  bottom: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  right: 0;
   background-image: linear-gradient(to top, var(--primary-theme-color), var(--secondary-theme-color));
   margin: 0;
   padding: 0;
@@ -71,16 +116,16 @@
   list-style: none;
 }
 
-.header-nav__link-list--open {
+.header-nav__menu-link-list--open {
   opacity: 1;
   pointer-events: auto;
 }
 
-.header-nav__link-item {
+.header-nav__menu-link-item {
   display: flex;
 }
 
-.header-nav__link-item--close-icon-container {
+.header-nav__menu-close-icon-container {
   position: absolute;
   top: 1rem;
   right: 2rem;
@@ -88,11 +133,12 @@
   cursor: pointer;
 }
 
-.header-nav__close-icon {
+.header-nav__menu-close-icon {
+  fill: var(--text-color);
   height: 100%;
 }
 
-.header-nav__link {
+.header-nav__menu-link {
   position: relative;
   color: var(--text-color);
   text-decoration: none;
@@ -100,38 +146,42 @@
   transition: var(--all-transitions);
 }
 
-.header-nav__link::after {
+.header-nav__menu-link::before {
   content: '';
   position: absolute;
-  bottom: -0.125rem;
   left: 0;
+  bottom: -0.125rem;
   width: 0;
   height: 0.125rem;
   background-color: var(--secondary-highlight);
   transition: var(--all-transitions);
 }
 
-.header-nav__link--active, .header-nav__link.active, .header-nav__link:hover {
+.header-nav__menu-link--active,
+.header-nav__menu-link.active,
+.header-nav__menu-link:hover {
   color: var(--primary-highlight);
 }
 
-.header-nav__link--active::after, .header-nav__link.active::after, .header-nav__link:hover::after {
+.header-nav__menu-link--active::before,
+.header-nav__menu-link.active::before,
+.header-nav__menu-link:hover::before {
   width: 100%;
 }
 
 @media (min-width: 854px) {
 
+  .header-nav__theme-menu-container {
+    flex-direction: row-reverse;
+    gap: 1rem;
+  }
+
   .header-nav__menu-icon-container,
-  .header-nav__link-item--close-icon-container {
+  .header-nav__menu-close-icon-container {
     display: none;
   }
 
-  .header-nav-container {
-    max-width: 1024px;
-    margin: auto;
-  }
-
-  .header-nav__link-list {
+  .header-nav__menu-link-list {
     position: static;
     flex-direction: row;
     background-image: none;
